--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Permite extraer los datos desde diferentes repositorios",
   "main": "testSips.js",
   "dependencies": {
+    "@andes/match": "^1.1.9",
     "jsdoc": "^3.4.0",
     "jsonfile": "^2.4.0",
     "mongodb": "^2.2.11",
@@ -11,6 +12,7 @@
     "request": "^2.78.0",
     "typescript": "^2.0.6",
     "typings": "^1.5.0",
+    "winston": "^2.4.0",
     "xml2json": "^0.10.0",
     "xmljson": "^0.2.0"
   },
