--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "mssql": "^3.3.0",
     "request": "^2.78.0",
     "typescript": "^2.0.6",
-    "typings": "^1.5.0",
     "xml2json": "^0.10.0"
   },
   "devDependencies": {
+    "@types/es6-promise": "0.0.33",
     "@types/node": "^6.0.46"
   },
   "scripts": {
