--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "jsdoc": "^3.4.0",
     "mongodb": "^3.0.1",
     "mssql": "^4.1.0",
+    "mysql": "^2.15.0",
     "request": "^2.78.0",
     "typescript": "^2.6.2",
     "xml2json": "^0.10.0"
